<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/proflie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment_profile">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="409dp"
        android:layout_height="274dp"
        android:contentDescription="@string/profile_picture"
        android:src="@drawable/_" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button1"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="293dp"
            android:layout_marginEnd="236dp"
            android:shadowColor="#2196F3"
            android:text="@string/Button_name"
            android:textColorLink="#2196F3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="356dp"
            android:text="@string/Name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button1"
            app:layout_constraintVertical_bias="0.100000024" />

        <Button
            android:id="@+id/button2"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="293dp"
            android:layout_marginEnd="56dp"
            android:text="@string/Button_Nick_Name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="106dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="127dp"
            android:layout_marginBottom="37dp"
            android:text="@string/Nick_Name"
            app:layout_constraintBottom_toTopOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="56dp"
            android:text="@string/Button_about_me"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="359dp"
            android:layout_height="141dp"
            android:layout_marginStart="168dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="168dp"
            android:layout_marginBottom="131dp"
            android:text="@string/Text_introduction"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>